<resources>
    <string name="app_name">MyStoryApp</string>

    <string name="signup">Register</string>
    <string name="login">Sign in</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just code it!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning in Coding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Log out</string>


    <string name="empty_username_warning">Please enter your username first.</string>
    <string name="empty_email_warning">Please enter your email first.</string>
    <string name="empty_password_warning">Please enter the password first.</string>
    <string name="empty_image_warning">Please enter the image file first.</string>

    <string name="empty_text_warning">Please enter your username, email and password first.</string>

    <string name="error_password">Password Less Than 8 Characters</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_name">Decoding</string>
    <string name="desc_stories">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the "</string>
    <string name="menu_settings">menu settings</string>
    <string name="text_email">Enter Email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="menu_darkmode">Dark Mode</string>
    <string name="menu_lightMode">Light Mode</string>
    <string name="appwidget_text">STORY IMAGE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="sure_logout">Are you sure you want to continue logging out?</string>
    <string name="continues">Continue</string>
    <string name="succeed">Yeah! Success</string>
    <string name="succeed_message">The account is now ready. Come on, log in and see the story.</string>
    <string name="submit">Submit</string>
    <string name="text_password">Enter Password</string>


    <string name="menu_map">menu map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="night_type">Night Dark</string>
    <string name="retry">coba lagi</string>

</resources>